--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@application/*": ["./src/application/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@infra/*": ["./src/infrastructure/*"],
+      "@test/*": ["./test/*"]
+    }
   }
 }
